argocd/manifests/homepage/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/managed-by: argocd
